[#914] Fix datepicker select element width on small screens

--- a/src/components/DatePicker/style.scss
+++ b/src/components/DatePicker/style.scss
@@ -70,6 +70,9 @@
   }
 
   .datepicker > div {
+    @media #{$media-small-minus} {
+      min-width: auto;
+    }
     &:first-of-type {
       > div {
         @media #{$media-small-minus} {
